<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_BacSi_TrangChu"
            android:icon="@drawable/ic_trangchu"
            android:title="@string/title_TrangChu" />
        <item
            android:id="@+id/nav_BacSi_LichKham"
            android:icon="@drawable/ic_datlichkham"
            android:title="@string/title_LichKham" />
        <item
            android:id="@+id/nav_BacSi_ThemHoSoBenhNhan"
            android:icon="@drawable/ic_themhoso"
            android:title="@string/title_ThemHoSoBenhNhan" />
        <item
            android:id="@+id/nav_BacSi_QuanLyBenhNhan"
            android:icon="@drawable/ic_quanlibenhnhan"
            android:title="@string/title_QuanLyBenhNhan" />
        <item
            android:id="@+id/nav_BacSi_HoSoBacSi"
            android:icon="@drawable/ic_hoso"
            android:title="@string/title_HoSoBacSi" />
        <item
            android:id="@+id/nav_BacSi_LichSuKham"
            android:icon="@drawable/ic_lichsukham"
            android:title="@string/title_LichSuKham" />
        <item
            android:id="@+id/nav_BacSi_DangXuat"
            android:icon="@drawable/ic_dangxuat"
            android:title="@string/title_DangXuat" />

    </group>
</menu>