<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#AAAA"
    android:orientation="vertical"
    tools:context=".TrangBenhNhan.BenhNhan_NCOVI">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorDefault"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDefault"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/title_NCOVI"
            android:textColor="#ffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBack_NCOVI"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left|center"
            android:background="@color/colorDefault"
            android:src="@drawable/ic_back" />
    </FrameLayout>

    <TextView
        android:id="@+id/txtThongTinDich"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="2dp"
        android:background="@drawable/edit"
        android:gravity="center_vertical"
        android:text="@string/title_ThongTinDich"
        android:textColor="#000"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/txtKhaiBaoYTe"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="2dp"
        android:background="@drawable/edit"
        android:gravity="center_vertical"
        android:text="@string/title_KhaiBaoYTe"
        android:textColor="#000"
        android:textSize="28dp" />

    <TextView
        android:id="@+id/txtHuongDanPhongDich"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="2dp"
        android:background="@drawable/edit"
        android:gravity="center_vertical"
        android:text="@string/title_HuongDanPhongDich"
        android:textColor="#000"
        android:textSize="28dp" />

</LinearLayout>