<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChonNguoiDung">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorDefault"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/title_NguoiDung"
        android:textColor="#ffff"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtChonNguoiDung_BenhNhan"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/edit2"
            android:gravity="center"
            android:text="@string/title_BenhNhan"
            android:textColor="#FFFF"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/txtChonNguoiDung_BacSi"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit2"
            android:gravity="center"
            android:text="@string/title_BacSi"
            android:textColor="#FFFF"
            android:textSize="30dp" />
    </LinearLayout>
</LinearLayout>