<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/ScrollView_DangKy"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_HoTenBenhNhan"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edtHoTen_Fragment_BacSi_ThemHoSoBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title_EmailBenhNhan"
                        android:textColor="@color/colorBlack"
                        android:textSize="20dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:gravity="center"
                        android:text="@string/title_KhongBatBuoc"
                        android:textColor="@color/colorBlack"
                        android:textSize="20dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edtEmail_Fragment_BacSi_ThemHoSoBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:inputType="textEmailAddress"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_TuoiBenhNhan"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtTuoi_Fragment_BacSi_ThemHoSoBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_GioiTinh"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdNam_Fragment_BacSi_ThemHoSoBenhNhan"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:text="@string/title_Nam" />

                    <RadioButton
                        android:id="@+id/rdNu_Fragment_BacSi_ThemHoSoBenhNhan"
                        android:layout_width="100dp"
                        android:layout_height="60dp"
                        android:text="@string/title_Nu" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_NoiOHienTai"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/edtNoiOHienTai_Fragment_BacSi_ThemHoSoBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:inputType="text"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_SoDienThoai"
                    android:textColor="@color/colorBlack"
                    android:textSize="20dp" />

                <EditText
                    android:id="@+id/txtSoDienThoai_Fragment_BacSi_ThemHoSoBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/edit3"
                    android:gravity="center_vertical"
                    android:inputType="phone|number"
                    android:padding="5dp"
                    android:textSize="20dp" />
            </LinearLayout>


            <Button
                android:id="@+id/btnDangKy_DangKy_BenhNhan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:background="@drawable/button2"
                android:text="@string/title_ThemHoSo"
                android:textColor="#ffff"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>