<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TrangBenhNhan.BenhNhan_DangKyBenhNhan">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorDefault"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorDefault"
            android:gravity="center"
            android:text="@string/title_DangKyBenhNhan"
            android:textColor="#ffff"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBack_BenhNhan__DangKyBenhNhan"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="left|center"
            android:background="@color/colorDefault"
            android:src="@drawable/ic_back" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/ScrollView_DangKy"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="30dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtHoTen_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_HoTen"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNamSinh_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_NgayThangNamSinh"
                        android:inputType="date"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/title_GioiTinh"
                        android:textSize="20dp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@drawable/edit3">

                        <RadioButton
                            android:id="@+id/rdNam_BenhNhan_DangKyBenhNhan"
                            android:layout_width="100dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="10dp"
                            android:text="@string/title_Nam" />

                        <RadioButton
                            android:id="@+id/rdNu_BenhNhan_DangKyBenhNhan"
                            android:layout_width="100dp"
                            android:layout_height="60dp"
                            android:text="@string/title_Nu" />
                    </RadioGroup>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNoiOHienTai_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_NoiOHienTai"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtQueQuan_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_QueQuan"
                        android:inputType="text"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtSoDienThoai_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_SoDienThoai"
                        android:inputType="phone"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtMatKhau_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_MatKhau"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtXacNhanMatKhau_BenhNhan_DangKyBenhNhan"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/edit4"
                        android:drawablePadding="10dp"
                        android:hint="@string/title_XacNhanMatKhau"
                        android:inputType="textPassword"
                        android:padding="12dp"
                        android:textColorHint="@color/colorDefault" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnDangKy_BenhNhan_DangKyBenhNhan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button2"
                    android:text="@string/title_DangKy"
                    android:textSize="20dp"
                    android:textColor="#ffff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>